fix: change favicon, change paper info box

--- a/_posts/2025-04-16-test.md
+++ b/_posts/2025-04-16-test.md
@@ -21,6 +21,10 @@ render_with_liqueid: true
 > **DeepSeek-R1 : Incentivizing Reasoning Capability in LLMs via Reinforcement Learning** ([arXiv](https://arxiv.org/abs/2501.12948))
 > Year : 2025
 > Authors : DeepSeek-AI
+> 
+{: .paper-info-box }
+
+---
 
 ![Desktop View](../assets/img/post/deepseek/정리.png)
 
