fix: change paper info box

--- a/_posts/2025-04-16-test.md
+++ b/_posts/2025-04-16-test.md
@@ -18,10 +18,9 @@ comments: true
 render_with_liqueid: true
 ---
 
-> **DeepSeek-R1 : Incentivizing Reasoning Capability in LLMs via Reinforcement Learning** ([arXiv](https://arxiv.org/abs/2501.12948))
-> Year : 2025
-> Authors : DeepSeek-AI
-> 
+> **DeepSeek-R1 : Incentivizing Reasoning Capability in LLMs via Reinforcement Learning** ([arXiv](https://arxiv.org/abs/2501.12948)) <br>
+> Year : 2025 <br>
+> Authors : DeepSeek-AI <br>
 {: .paper-info-box }
 
 ---
