fix: fix dit conclusion

--- a/_posts/2025-05-09-dit.md
+++ b/_posts/2025-05-09-dit.md
@@ -264,9 +264,9 @@ Guidance를 적용했을 때 성능이 극적으로 올라간다.
 DiT는 Vision Transformer(ViT) 구조를 diffusion model의 backbone으로 적용함으로써 U-Net의 inductive bias에 의존하지 않고도 고품질 이미지를 생성할 수 있음을 보여주었다.
 
 1. Transformer scaling law 적용 
-   - DiT는 모델 크기, depth, token 수를 증가시킬수록 성능(FID, Inception Score 등)이 지속적으로 향상되는 scaling property를 확인했습니다.
+   - DiT는 모델 크기, depth, token 수를 증가시킬수록 성능(FID, Inception Score 등)이 지속적으로 향상되는 scaling property를 확인
 2. 다양한 conditioning 방식 실험
    - cross-attention, in-context conditioning, adaptive layer norm (adaLN), adaLN-Zero block 등의 다양한 transformer block design을 실험
-   - 그 중 adaLN-Zero block이 가장 연산 효율성과 성능 모두에서 우수함을 보여주었습니다.
+   - 그 중 adaLN-Zero block이 가장 연산 효율성과 성능 모두에서 우수함을 보여줌
 3. Latent Diffusion 적용
    - high-resolution pixel space 대신 VAE latent space에서 diffusion을 수행하여 메모리와 계산 효율성을 높임
