fix: fix advlogo

--- a/_posts/2025-05-14-advlogo.md
+++ b/_posts/2025-05-14-advlogo.md
@@ -143,6 +143,7 @@ $$
 \nabla_{\tilde{z}_T} \mathcal{L}_{det} \approx \nabla_{z_0} \mathcal{L}_{det} \left( \sqrt{\frac{1}{\alpha_{T-1}}} \frac{\partial z_T}{\partial \tilde{z}_T} + \sqrt{\frac{\alpha_T - \alpha_{T-1}}{\alpha_T \alpha_{T-1}}} \frac{\partial \epsilon_\theta(z_T)}{\partial \tilde{z}_T} \right)
 $$
 
+---
 
 ### Algorithm
 
@@ -183,7 +184,7 @@ $$
 
 ## Conclusion
 
-AdvLogo는 diffusion 기반의 semantic 공간을 활용하여 새로운 적대적 패치 공격 프레임워크를 제안하였습니다. 
+AdvLogo는 diffusion 기반의 semantic 공간을 활용하여 새로운 적대적 패치 공격 프레임워크를 제안하였다. 
 다음과 같은 강점을 가진다:
 
 - Latent의 frequency domain에서 perturbation을 적용하여 시각적 품질을 보존
