fix: change advdiff

--- a/_posts/2025-05-19-advdiff.md
+++ b/_posts/2025-05-19-advdiff.md
@@ -87,12 +87,7 @@ $$
 \hat{\mu}_\theta(\mathbf{x}_t, t) = \mu_\theta(\mathbf{x}_t, t) + s \cdot \nabla_{\mathbf{x}_t} \log p_\phi(y | \mathbf{x}_t)
 $$
 
-- $p_\phi(y|\mathbf{x}_t)$: classifier가 $\mathbf{x}_t$를 클래스 $y$로 분류할 확률
-- $\nabla_{\mathbf{x}_t}$: 입력에 대한 gradient
-- $s$: guidance scale (크면 classifier의 영향을 많이 받음)
-
 classifier의 로그 확률을 증가시키는 방향으로 샘플을 수정함으로써, 조건부 생성(class-conditional generation)을 가능하게한다.
-
 
 ### Classifier-Free Guidance
 
@@ -100,11 +95,7 @@ $$
 \hat{\epsilon}_\theta(\mathbf{x}_t | y) = \epsilon_\theta(\mathbf{x}_t | \emptyset) + w \cdot (\epsilon_\theta(\mathbf{x}_t | y) - \epsilon_\theta(\mathbf{x}_t | \emptyset))
 $$
 
-- $w$: guidance weight
-- $\epsilon_\theta(\cdot | y)$: label-conditioned noise prediction
-- $\epsilon_\theta(\cdot | \emptyset)$: unconditional noise prediction
-
-classifier 없이도 label 정보를 활용할 수 있게 해주는 구조로 $\epsilon_\theta(\cdot | y)$가 생성하고자 하는 클래스의 특성을 반영한다.
+classifier 없이도 label 정보를 활용할 수 있게 해주는 구조로 생성하고자 하는 클래스의 특성을 반영한다.
 
 ---
 
@@ -125,8 +116,8 @@ $$
 $$
 
 - $y_a$: 공격 대상 클래스
-- $p_f(y_a|\cdot)$: target classifier의 예측 확률
-- $\nabla_{\mathbf{x}} \log p$: 예측 확률을 높이는 방향의 gradient
+- $p_f$: target classifier의 예측 확률
+- $\nabla_{\mathbf{x}_{t-1}}$: 예측 확률을 높이는 방향의 gradient
 
 Reverse sampling 중간에 adversarial objective를 삽입함으로써 공격력이 생기고, 동시에 생성 품질은 유지한다.
 
