--- a/_posts/2025-07-03-m4i.md
+++ b/_posts/2025-07-03-m4i.md
@@ -93,7 +93,7 @@ $$
 F_i = f_i(i_i),\quad F_t = f_t(t_i),\quad z_i = F_i - F_t
 $$
 
-이때 \( z_i \)를 입력으로 받아 binary classification을 수행하는 attack model \( M_{\text{attack}} \)을 학습한다.
+이때 $z_i$를 입력으로 받아 binary classification을 수행하는 attack model $M_{\text{attack}}$을 학습한다.
 
 $$
 y_i = M_{\text{attack}}(z_i)
