fix: fix m4i result

--- a/_posts/2025-07-03-m4i.md
+++ b/_posts/2025-07-03-m4i.md
@@ -48,6 +48,7 @@ render_with_liqueid: true
 1. **Unrestricted Scenario**: training data 분포와 모델 구조 모두 알고 있는 상황 (gray-box).
 2. **Data-only Scenario**: 데이터 분포만 알고 있는 상황.
 3. **Constrained Scenario**: 어떤 정보도 없는 상황 (black-box).
+
 ## Methods
 
 ![Desktop View](../assets/img/post/0703/overview.png)_overview of the proposed methods._
@@ -138,7 +139,7 @@ ROC 분석 결과에서도 feature-based attack이 false positive rate을 낮추
 
 ![Desktop View](../assets/img/post/0703/medical.png)_medical domain result._
 
-의료 도메인인 R2GenCMN 모델을 대상으로 공격 실험을 수행한 결과, feature-based attack은 82%의 성공률을 기록하며, 실세계 민감 정보에 대해서도 위협이 됨을 입증했다.
+의료 도메인인 R2GenCMN 모델을 대상으로 공격 실험을 수행한 결과, feature-based attack은 82%의 성공률을 기록하며, 실제 환경에서의 민감 정보에 대해서도 위협이 됨을 입증했다.
 
 ## Conclusion
 
