--- a/_posts/2025-07-30-fusion.md
+++ b/_posts/2025-07-30-fusion.md
@@ -29,7 +29,7 @@ render_with_liqueid: true
 
 ![Desktop View](../assets/img/post/0730/1.png)_Multi-modal fusion._
 
-멀티모달 모델인 Vision Language Model은 이미지와 텍스트 등 서로 다른 모달리티의 특성을 결합하기 위해 다양한 fusion 방식을 사용한다.
+멀티모달 모델인 Vision Language Model은 이미지와 텍스트 등 서로 다른 모달리티의 특성을 결합하기 위해 다양한 fusion 방식을 사용합니다.
 
 기존에 주로 사용되는 fusion 기법으로는 concatenate, element-wise operation, bilinear pooling, attention 기반 fusion, gating mechanism 등이 있다.
 
